    - BREAKING: The BibTeX key generator settings from previous versions are lost
    - BREAKING: LabelPatterns [auth.etal], [authEtAl], [authors], [authorsN], [authorLast] and more to omit spaces and commas (and work as described at http://jabref.sourceforge.net/help/LabelPatterns.php)
    - BREAKING: [keywordN] returns the Nth keyword (as described in the help) and not the first N keywords
    - Feature: new LabelPattern [authFirstFull] returning the last name of the first author and also a "van" or "von" if it exists
    - Feature: all new lines when writing an entry are obeying the globally configured new line (File -> newline separator). Affects fields: abstract and review
    - Feature: [veryShortTitle] and [shortTitle] also skip words like "in", "among", "before", ...
    - Feature: New LabelPattern [keywordsN], where N is optional. Returns the first N keywords. If no N is specified ("[keywords]"), all keywords are returned. Spaces are removed.
    - Removes support for key bindings per external application by allowing only the key binding "push to application" for the currently selected external application.
    - Removes "edit preamble" from toolbar
    - Fix #250: No hard line breaks after 70 chars in serialized JabRef meta data
    - Update supported LookAndFeels
    - Fix sourceforge bug 1296: External links in the help open in the standard browser
[dev_2.11]
    - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
    - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
    - Backports from 2.80: Bug fix in #193: sometimes IEEEXplore stalls during fetch
    - Backports from 2.80: Fixes #194 and #244: JabRef starts again on Win XP and Win Vista
    - Backports from 2.80: Fixes #103: JDialog for auto set links is opened and closed correctly
    - Backports from 2.80: Define a default lookAndFeel for Mac OS X
2.11 beta 4
    - Add of Persian localization (by Behrouz Javanmardi)