@@ -53,6 +53,7 @@
     - BREAKING: The BibTeX key generator settings from previous versions are lost
     - BREAKING: LabelPatterns [auth.etal], [authEtAl], [authors], [authorsN], [authorLast] and more to omit spaces and commas (and work as described at http://jabref.sourceforge.net/help/LabelPatterns.php)
     - BREAKING: [keywordN] returns the Nth keyword (as described in the help) and not the first N keywords
+    - BREAKING: If field consists of blanks only or an emtpy string, it is not written at all
     - Feature: new LabelPattern [authFirstFull] returning the last name of the first author and also a "van" or "von" if it exists
     - Feature: all new lines when writing an entry are obeying the globally configured new line (File -> newline separator). Affects fields: abstract and review
     - Feature: [veryShortTitle] and [shortTitle] also skip words like "in", "among", "before", ...
